--- a/_c8oProject/mobilePages/Projects.yaml
+++ b/_c8oProject/mobilePages/Projects.yaml
@@ -52,7 +52,7 @@ scriptContent:
         	}
         	/*End_c8o_PageDeclaration*/
         /*Begin_c8o_PageConstructor*/
-        		window["convertigo"] = this.c8o;
+        		window["c8o_c8o"] = this.c8o;
         		/*End_c8o_PageConstructor*/
         /*Begin_c8o_PageFunction*/
         //	onFocus = ($event) => {
@@ -95,6 +95,26 @@ title: Title for Projects
                 - ↑value: angular-tree-component
               - java.lang.String: 
                 - ↑value: 7.2.1
+↓ButtonSet [mobile.components.UIDynamicElement-1589198919296]: 
+  beanData: '{"ionBean":"ButtonSet"}'
+  tagName: ion-buttons
+  ↓Button [mobile.components.UIDynamicElement-1589198944828]: 
+    beanData: '{"ionBean":"Button"}'
+    tagName: button
+    ↓Icon [mobile.components.UIDynamicElement-1589198839410]: 
+      beanData: '{"ionBean":"Icon","IconName":"plain:archive"}'
+      tagName: ion-icon
+    ↓Event [mobile.components.UIControlEvent-1589203245136]: 
+      ↓Save [mobile.components.UIDynamicAction-1589203255756]: 
+        beanData: '{"ionBean":"CallSequenceAction","requestable":"plain:C8oStudio.Save"}'
+        ↓project [mobile.components.UIControlVariable-1589203568250]: 
+          comment: new variable
+          varValue: 
+            - xmlizable: 
+              - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+              - MobileSmartSourceType: script:this.tree.treeModel.getFocusedNode().data.name.replace(/\\..*/, '')
+        ↓Log [mobile.components.UIDynamicAction-1589207109103]: 
+          beanData: '{"ionBean":"LogAction","message":"script:out.success ? ''saved'' : ''save failed''"}'
 ↓Tag [mobile.components.UIElement-1588600889253]: 
   identifier: tree
   tagName: tree-root
