Handle create bean and ion bean from the Palette.

--- a/_c8oProject/mobileApplication.yaml
+++ b/_c8oProject/mobileApplication.yaml
@@ -134,6 +134,7 @@ tplProjectName: C8oStudio
           	 		background-color: your color; 
           	 		background-image: url(some background image);
           	*/
+          	background-color: color($colors, ''dark'')
           }
           
           .toolbar-background {
