Styled the palette

--- a/_c8oProject/mobilePages/Palette.yaml
+++ b/_c8oProject/mobilePages/Palette.yaml
@@ -53,36 +53,26 @@ title: Title for Palette
                   - MobileSmartSourceType: source:{"filter":"Iteration","project":"C8oStudio","input":"item1589294466370?.displayName"}
           ↓CardContainer [mobile.components.UIDynamicElement-1589296323341]: 
             beanData: '{"ionBean":"Card"}'
+            isEnabled: false
             tagName: ion-card
             ↓CardContent [mobile.components.UIDynamicElement-1589296328887]: 
               beanData: '{"ionBean":"CardContent"}'
               tagName: ion-card-content
-              ↓Tag [mobile.components.UIElement-1589296349151]: 
-                selfClose: true
-                tagName: img
-                ↓Attr [mobile.components.UIAttribute-1589296349154]: 
-                  attrName: src
-                  attrValue: 
-                    - xmlizable: 
-                      - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
-                      - MobileSmartSourceType: plain:{{ this.c8o.endpoint }}/.bin?__sequence=GetIcon&className={{ item1589294466370.className }}&large=true
-                ↓Attr1 [mobile.components.UIAttribute-1589310725332]: 
-                  attrName: draggable
-                  attrValue: 
-                    - xmlizable: 
-                      - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
-                      - MobileSmartSourceType: plain:false
-              ↓Text [mobile.components.UIText-1589296402954]: 
-                textValue: 
-                  - xmlizable: 
-                    - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
-                    - MobileSmartSourceType: source:{"filter":"Iteration","project":"C8oStudio","input":"item1589294466370?.displayName"}
+          ↓Div [mobile.components.UIDynamicElement-1589779436965]: 
+            beanData: '{"ionBean":"DivTag"}'
+            tagName: div
             ↓Attr [mobile.components.UIAttribute-1589307787206]: 
               attrName: draggable
               attrValue: 
                 - xmlizable: 
                   - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
                   - MobileSmartSourceType: plain:true
+            ↓Attr1 [mobile.components.UIAttribute-1589308698329]: 
+              attrName: attr.data-classname
+              attrValue: 
+                - xmlizable: 
+                  - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+                  - MobileSmartSourceType: source:{"filter":"Iteration","project":"C8oStudio","input":"item1589294466370?.className"}
             ↓Event [mobile.components.UIControlEvent-1589307855989]: 
               attrName: (dragstart)
               eventName: (dragstart)
@@ -100,9 +90,44 @@ title: Title for Palette
                         		console.log(event.srcElement.getAttribute(''data-classname''));
                         		resolve();
                         '
-            ↓Attr1 [mobile.components.UIAttribute-1589308698329]: 
-              attrName: attr.data-classname
+            ↓Attr2 [mobile.components.UIAttribute-1589779554332]: 
+              attrName: class
               attrValue: 
                 - xmlizable: 
                   - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
-                  - MobileSmartSourceType: source:{"filter":"Iteration","project":"C8oStudio","input":"item1589294466370?.className"}
+                  - MobileSmartSourceType: plain:palette-item
+            ↓Image [mobile.components.UIDynamicElement-1589698349369]: 
+              beanData: '{"ionBean":"Image"}'
+              selfClose: true
+              tagName: img
+              ↓Attr [mobile.components.UIAttribute-1589296349154]: 
+                attrName: src
+                attrValue: 
+                  - xmlizable: 
+                    - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+                    - MobileSmartSourceType: plain:{{ this.c8o.endpoint }}/.bin?__sequence=GetIcon&className={{ item1589294466370.className }}&large=true
+              ↓Attr1 [mobile.components.UIAttribute-1589310725332]: 
+                attrName: draggable
+                attrValue: 
+                  - xmlizable: 
+                    - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+                    - MobileSmartSourceType: plain:false
+              ↓SetWidth [mobile.components.UIStyle-1589699684073]: 
+                styleContent: 
+                  - xmlizable: 
+                    - ↑classname: com.twinsoft.convertigo.beans.common.FormatedContent
+                    - com.twinsoft.convertigo.beans.common.FormatedContent: 
+                      →: |
+                        '	width: 32px !important;
+                        '
+            ↓Text [mobile.components.UIText-1589296402954]: 
+              textValue: 
+                - xmlizable: 
+                  - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+                  - MobileSmartSourceType: source:{"filter":"Iteration","project":"C8oStudio","input":"item1589294466370?.displayName"}
+  ↓Attr [mobile.components.UIAttribute-1589699592601]: 
+    attrName: class
+    attrValue: 
+      - xmlizable: 
+        - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+        - MobileSmartSourceType: plain:page-palette
