--- a/_c8oProject/mobileApplication.yaml
+++ b/_c8oProject/mobileApplication.yaml
@@ -67,11 +67,12 @@ tplProjectName: C8oStudio
           // The "primary" color is the only required color in the map.
           
           $colors: (
-                  primary:    #387ef5,
-                  secondary:  #32db64,
-                  danger:     #f53d3d,
-                  light:      #f4f4f4,
-                  dark:       #222
+                  primary:     #387ef5,
+                  secondary:   #32db64,
+                  danger:      #f53d3d,
+                  light:       #f4f4f4,
+                  dark:        #222,
+                  lighterdark: #333
           );
           
           
@@ -646,6 +647,25 @@ tplProjectName: C8oStudio
               fill: white;
           }
           /*  Links  */
+          '
+↓PaletteStyles [mobile.components.UIStyle-1589698075738]: 
+  styleContent: 
+    - xmlizable: 
+      - ↑classname: com.twinsoft.convertigo.beans.common.FormatedContent
+      - com.twinsoft.convertigo.beans.common.FormatedContent: 
+        →: |
+          '.page-palette .palette-item {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;	
+            background: color($colors, lighterdark, base);
+            color: white;
+            width: 150px;
+            height: 64px;
+          }
+          
+          .page-palette .palette-item img {
+            width: 32px !important	
+          }
+          
           '
 ↓ShowGrids [mobile.components.UIStyle-1588234332401]: 
   isEnabled: false
