--- a/c8oProject.yaml
+++ b/c8oProject.yaml
@@ -24,5 +24,5 @@
     ↓iOS [mobileplatforms.IOs]: 
       comment: iOS platform
     ↓Application [mobile.components.ApplicationComponent]: 🗏 mobileApplication.yaml
-  ↓Project_reference [references.ProjectSchemaReference]: 
-    projectName: lib_ExtendedComponents
+  ↓lib_ExtendedComponents_reference [references.ProjectSchemaReference]: 
+    projectName: lib_ExtendedComponents=git@github.com:convertigo/c8oprj-lib-extended-components.git:branch=master
